@@ -67,6 +67,9 @@ int fips_post_failed(int id, int subid, void *ex);
 int fips_post_corrupt(int id, int subid, void *ex);
 int fips_post_status(void);
 
+#define FIPS_MODULE_VERSION_NUMBER	0x20000000L
+#define FIPS_MODULE_VERSION_TEXT	"FIPS 2.0-dev unvalidated test module xx XXX xxxx"
+
 #ifdef  __cplusplus
 }
 #endif
